open blog in new tab

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ layout: transparent-navbar
                     style="margin:0;position:relative;top:50%;-ms-transform: translateY(-50%);transform: translateY(-50%);">
                     <p>You can hear stories about our teachers and students, or see news and upcoming events from the
                         school.</p>
-                    <a href="http://oakhillk12.blogspot.com/" class="uk-button uk-button-large uk-button-primary">Blog</a>
+                    <a target="_blank" href="http://oakhillk12.blogspot.com/" class="uk-button uk-button-large uk-button-primary">Blog</a>
                 </div>
             </div>
         </div>
