--- a/visit.html
+++ b/visit.html
@@ -6,6 +6,17 @@ title: Visit Us
 
 <div class="uk-margin-large uk-container">
     <h3>Schedule a Visit</h3>
+    <p>We offer in-person tours Monday through Friday.</p>
+    <p class="uk-margin-remove-bottom">If you are out of town or prefer not to come in, FaceTime or Facebook Messenger
+        tours are available at all the times that in-person tours are available. Simply:</p>
+    <ol class="uk-margin-remove-top">
+        <li>Select your time.</li>
+        <li>If you would like a tour by FaceTime, indicate this in the message section and also tell us there the number
+            of the phone you will be using</li>
+        <li>If you prefer Facebook Messenger, indicate this in the message section and tell us what email to send the
+            Facebook Messenger room link to.</li>
+        <li>We will call you on FaceTime or send a link to the Facebook Messenger room a few minutes before your tour.</li>
+    </ol>
 </div>
 
 <div id="step-one" class="uk-container uk-container-xsmall uk-margin-bottom">
@@ -284,7 +295,7 @@ title: Visit Us
                     } else {
                         if (days_not_avail.values) {
                             if (bookings.values) {
-                            items = days_not_avail.values.concat(bookings.values);
+                                items = days_not_avail.values.concat(bookings.values);
                             } else {
                                 items = days_not_avail.values
                             }
