--- a/virtual-tour.html
+++ b/virtual-tour.html
@@ -66,20 +66,6 @@ title: Virtual Tour
     </div>
 </div>
 
-<div class="uk-background-secondary">
-    <div class="uk-container">
-        <div uk-grid>
-            <div class="uk-width-1-3@l">
-                <h2 class="orange-underline uk-margin-large-top">Cirriculum</h2>
-                <p class="uk-margin-large-bottom">Something about our cirriculum</p>
-            </div>
-            <div class="uk-width-2-3@l">
-
-            </div>
-        </div>
-    </div>
-</div>
-
 <div id="education" class="uk-overflow-hidden uk-background-norepeat uk-background-cover uk-background-blend-overlay"
     style="background-image: url({{ '/assets/images/area.png' | relative_url }}); background-color: #1e1e1e;">
     <div class="uk-text-center uk-container uk-margin-large-top uk-margin-large-bottom uk-light">
@@ -119,36 +105,57 @@ title: Virtual Tour
 
 <div class="uk-background-secondary">
     <div class="uk-container">
+
         <div uk-grid>
-            <div class="uk-width-1-3@l">
-                <h2 class="orange-underline uk-margin-large-top">Clubs, sports, and activities</h2>
-                <p class="uk-margin-large-bottom">Oak Hill offers numerous after school clubs and activities for
-                    students of all ages. Click on a picture to learn more about it.</p>
-            </div>
             <div class="uk-width-2-3@l">
-                <div class="uk-child-width-1-3@m uk-margin-large-top" uk-grid uk-lightbox="animation: slide">
-                    <div>
-                        <a class="uk-inline" href="assets/images/IMG_0051.jpg" data-caption="Art Club">
-                            <img src="assets/images/IMG_0051.jpg" alt="">
-                        </a>
-                    </div>
-                    <div>
-                        <a class="uk-inline" href="assets/images/IMG_2656.jpg" data-caption="Lego Club">
-                            <img src="assets/images/IMG_2656.jpg" alt="">
-                        </a>
-                    </div>
-                    <div>
-                        <a class="uk-inline" href="assets/images/athletics/2.png"
-                            data-caption="Girls' JV Volleyball Team">
-                            <img src="assets/images/athletics/2.png" alt="">
-                        </a>
-                    </div>
-                    <div>
-                        <a class="uk-inline" href="assets/images/athletics/3.png"
-                            data-caption="Boys' and Girls' JV Cross Country Team">
-                            <img src="assets/images/athletics/3.png" alt="">
-                        </a>
-                    </div>
+                <div class="uk-margin-large-top uk-margin-large-bottom" style="padding-top:60%;width:100%;position: relative;">
+                    <iframe style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                        src="https://www.google.com/maps/embed?pb=!4v1591283137199!6m8!1m7!1sCAoSLEFGMVFpcE9yamVDT1JoenVtWlhZQzczM0xGVW5VNTBXY0RUNHBNQjhSMkFW!2m2!1d38.95350429459334!2d-77.4117336049676!3f130.9387553587998!4f-6.773870877992678!5f0.7820865974627469"
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+                        uk-responsive></iframe>
+                    <!-- <iframe class="uk-margin-large-bottom" width="1920" height="1080"
+                src="https://www.youtube.com/embed/Dt_Vt9qtUeo?enablejsapi=1" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                uk-video="autoplay: false" uk-responsive id="campus-video"></iframe> -->
+                </div>
+            </div>
+            <div class="uk-width-1-3@l">
+                <h2 class="uk-margin-large-top">Look Around</h2>
+                <p class="uk-margin-large-bottom">Preview our campus using this map.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="uk-container uk-margin-large-bottom">
+    <div uk-grid>
+        <div class="uk-width-1-3@l">
+            <h2 class="orange-underline uk-margin-large-top">Clubs, sports, and activities</h2>
+            <p class="uk-margin-large-bottom">Oak Hill offers numerous after school clubs and activities for
+                students of all ages. Click on a picture to learn more about it.</p>
+        </div>
+        <div class="uk-width-2-3@l">
+            <div class="uk-child-width-1-3@m uk-margin-large-top" uk-grid uk-lightbox="animation: slide">
+                <div>
+                    <a class="uk-inline" href="assets/images/IMG_0051.jpg" data-caption="Art Club">
+                        <img src="assets/images/IMG_0051.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-inline" href="assets/images/IMG_2656.jpg" data-caption="Lego Club">
+                        <img src="assets/images/IMG_2656.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-inline" href="assets/images/athletics/2.png" data-caption="Girls' JV Volleyball Team">
+                        <img src="assets/images/athletics/2.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-inline" href="assets/images/athletics/3.png"
+                        data-caption="Boys' and Girls' JV Cross Country Team">
+                        <img src="assets/images/athletics/3.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
