--- a/visit.html
+++ b/visit.html
@@ -15,8 +15,10 @@ title: Visit Us
             of the phone you will be using</li>
         <li>If you prefer Facebook Messenger, indicate this in the message section and tell us what email to send the
             Facebook Messenger room link to.</li>
-        <li>We will call you on FaceTime or send a link to the Facebook Messenger room a few minutes before your tour.</li>
+        <li>Your personal tour guide will call you on FaceTime or send a link to the Facebook Messenger room a few minutes before your tour.</li>
     </ol>
+
+    <p><a href="/virtual-tour.html">We also have a virtual tour available on our website, which you can view right now.</a></p>
 </div>
 
 <div id="step-one" class="uk-container uk-container-xsmall uk-margin-bottom">
