add virtual tour to navbar

--- a/visit.html
+++ b/visit.html
@@ -18,7 +18,7 @@ title: Visit Us
         <li>Your personal tour guide will call you on FaceTime or send a link to the Facebook Messenger room a few minutes before your tour.</li>
     </ol>
 
-    <p><a href="/virtual-tour.html">We also have a virtual tour available on our website, which you can view right now.</a></p>
+    <p><a href="{{ '/virtual-tour' | relative_url }}">We also have a virtual tour available on our website, which you can view right now.</a></p>
 </div>
 
 <div id="step-one" class="uk-container uk-container-xsmall uk-margin-bottom">
