--- a/virtual-tour.html
+++ b/virtual-tour.html
@@ -73,15 +73,16 @@ title: Virtual Tour
     </div>
 </div>
 
-<div class="uk-container uk-margin-large-top">
-    <div uk-grid>
+<div class="uk-container">
+    <div class="uk-padding-large" uk-grid>
         <div class="uk-width-1-3@l">
             <h2>Our Campus</h2>
             <p>Oak Hill’s campus consists of a spacious building of its own as well as numerous nearby facilities
                 available for the school’s regular use.</p>
+            <p>Click on an image to view a larger version.</p>
             <span><i>Our Building</i></span>
             <ul class="uk-margin-remove-top">
-                <li><a onclick="seekPlayer(30)">Large classrooms with natural light</a></li>
+                <li>Large classrooms with natural light</li>
                 <li>Indoor Gym</li>
                 <li>Playground for younger students</li>
                 <li>Picnic area</li>
@@ -95,10 +96,35 @@ title: Virtual Tour
             </ul>
         </div>
         <div class="uk-width-2-3@l">
-            <iframe class="uk-margin-large-bottom" width="1920" height="1080"
-                src="https://www.youtube.com/embed/Dt_Vt9qtUeo?enablejsapi=1" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-                uk-video="autoplay: false" uk-responsive id="campus-video"></iframe>
+            <div class="uk-child-width-1-3@m uk-margin-large-top" uk-grid uk-lightbox="animation: slide">
+                <div>
+                    <a class="uk-inline" href="assets/images/front-door.jpg" data-caption="Outside of Our Building">
+                        <img src="assets/images/front-door.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-inline" href="assets/images/arrowbrook.jpg" data-caption="Nearby Arrowbrook Park">
+                        <img src="assets/images/arrowbrook.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-inline" href="assets/images/playground1.jpg" data-caption="Our Playground">
+                        <img src="assets/images/playground1.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-inline" href="assets/images/cassels.jpg"
+                        data-caption="Cassel’s Sports Complex, Used by Our Volleyball Team">
+                        <img src="assets/images/cassels.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-inline" href="assets/images/gym.jpg"
+                        data-caption="Our Gym">
+                        <img src="assets/images/gym.jpg" alt="">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -113,10 +139,6 @@ title: Virtual Tour
                         src="https://www.google.com/maps/embed?pb=!4v1591283137199!6m8!1m7!1sCAoSLEFGMVFpcE9yamVDT1JoenVtWlhZQzczM0xGVW5VNTBXY0RUNHBNQjhSMkFW!2m2!1d38.95350429459334!2d-77.4117336049676!3f130.9387553587998!4f-6.773870877992678!5f0.7820865974627469"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
                         uk-responsive></iframe>
-                    <!-- <iframe class="uk-margin-large-bottom" width="1920" height="1080"
-                src="https://www.youtube.com/embed/Dt_Vt9qtUeo?enablejsapi=1" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-                uk-video="autoplay: false" uk-responsive id="campus-video"></iframe> -->
                 </div>
             </div>
             <div class="uk-width-1-3@l">
@@ -161,28 +183,3 @@ title: Virtual Tour
         </div>
     </div>
 </div>
-
-<script src="https://www.youtube.com/iframe_api"></script>
-<script>
-    var player;
-    var playerReady = false;
-    function onYouTubeIframeAPIReady() {
-        player = new YT.Player('campus-video', {
-            events: {
-                'onReady': onPlayerReady,
-                'onStateChange': onPlayerStateChange
-            }
-        });
-    }
-
-    function onPlayerReady() {
-        playerReady = true;
-    }
-
-    function seekPlayer(location) {
-        if (playerReady) {
-            player.seekTo(location, true);
-        }
-    }
-
-</script>
