--- a/campus.html
+++ b/campus.html
@@ -25,6 +25,7 @@ title: Our Campus
         </div>
         <div>
             <p>Our building features large classrooms with beautiful views.  It includes a 2,000 square foot gym and multipurpose room as well as an outdoor playground and picnic area.  Our classes also have easy access to the adjacent Arrowbrook Park (Soccer, Tennis, Basketball) and to the Arrowbrook Nature Preserve.</p>
+            <p><a href="{{ '/virtual-tour' | relative_url }}">See more on our virtual tour page.</a></p>
         </div>
     </div>
 </div>
