--- a/virtual-tour.html
+++ b/virtual-tour.html
@@ -2,8 +2,6 @@
 layout: image-title
 image: assets/images/playground.png
 title: Virtual Tour
-redirect_from:
-- '/vt'
 ---
 
 <div class="uk-margin-large-top uk-margin-large-bottom uk-container uk-container-xsmall uk-text-center">
@@ -11,22 +9,33 @@ redirect_from:
     <p>Have a look around our school through these videos and pictures.</p>
 </div>
 
-<div id="education" class="uk-overflow-hidden uk-background-norepeat uk-background-cover uk-background-blend-overlay"
-    style="background-image: url({{ '/assets/images/area.png' | relative_url }}); background-color: #1e1e1e;">
-    <div class="uk-text-center uk-container uk-margin-large-top uk-margin-large-bottom uk-light">
-        <h1 class="uk-heading-small">Academics</h1>
+<div class="uk-background-secondary uk-margin-large-top">
+    <div class="uk-container">
+        <div uk-grid>
+            <div class="uk-width-1-3@l">
+                <h2 class="uk-margin-large-top">Art</h2>
+                <p>Dr. Justin Sutters discusses his integrated approach to teaching art.</p>
+            </div>
+            <div class="uk-width-2-3@l">
+                <iframe class="uk-margin-large-bottom uk-margin-large-top" width="1920" height="1080"
+                    src="https://www.youtube.com/embed/iOik3VRLiiE" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                    uk-video="autoplay: false" uk-responsive></iframe>
+            </div>
+        </div>
     </div>
 </div>
 
-<div class="uk-container uk-margin-large-top">
+
+<div class="uk-container">
     <div uk-grid>
         <div class="uk-width-1-3@l">
-            <h2>Art</h2>
-            <p>Dr. Justin Sutters discusses his integrated approach to teaching art.</p>
+            <h2 class="orange-underline uk-margin-large-top">Distance Learning</h2>
+            <p>These parents want to brag about Oak Hill's online transition.</p>
         </div>
         <div class="uk-width-2-3@l">
-            <iframe class="uk-margin-large-bottom" width="1920" height="1080"
-                src="https://www.youtube.com/embed/iOik3VRLiiE" frameborder="0"
+            <iframe class="uk-margin-large-bottom uk-margin-large-top" width="1920" height="1080"
+                src="https://www.youtube.com/embed/Ej5CUcXwvig" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
                 uk-video="autoplay: false" uk-responsive></iframe>
         </div>
@@ -121,8 +130,7 @@ redirect_from:
                     </a>
                 </div>
                 <div>
-                    <a class="uk-inline" href="assets/images/gym.jpg"
-                        data-caption="Our Gym">
+                    <a class="uk-inline" href="assets/images/gym.jpg" data-caption="Our Gym">
                         <img src="assets/images/gym.jpg" alt="">
                     </a>
                 </div>
@@ -135,35 +143,20 @@ redirect_from:
     <div class="uk-container">
         <div uk-grid>
             <div class="uk-width-1-3@l">
-                <h2 class="orange-underline uk-margin-large-top">Distance Learning</h2>
-                <p></p>
+                <h2 class="uk-margin-large-top">Look Around</h2>
+                <p class="uk-margin-large-bottom">Preview our campus using this map.</p>
             </div>
             <div class="uk-width-2-3@l">
-                <iframe class="uk-margin-large-bottom uk-margin-large-top" width="1920" height="1080"
-                    src="https://www.youtube.com/embed/Ej5CUcXwvig" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-                    uk-video="autoplay: false" uk-responsive></iframe>
+                <div class="uk-margin-large-top uk-margin-large-bottom"
+                    style="padding-top:60%;width:100%;position: relative;">
+                    <iframe style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                        src="https://www.google.com/maps/embed?pb=!4v1591283137199!6m8!1m7!1sCAoSLEFGMVFpcE9yamVDT1JoenVtWlhZQzczM0xGVW5VNTBXY0RUNHBNQjhSMkFW!2m2!1d38.95350429459334!2d-77.4117336049676!3f130.9387553587998!4f-6.773870877992678!5f0.7820865974627469"
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+                        uk-responsive></iframe>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
-<div class="uk-container">
-    <div uk-grid>
-        <div class="uk-width-1-3@l">
-            <h2 class="uk-margin-large-top">Look Around</h2>
-            <p class="uk-margin-large-bottom">Preview our campus using this map.</p>
-        </div>
-        <div class="uk-width-2-3@l">
-            <div class="uk-margin-large-top uk-margin-large-bottom" style="padding-top:60%;width:100%;position: relative;">
-                <iframe style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                    src="https://www.google.com/maps/embed?pb=!4v1591283137199!6m8!1m7!1sCAoSLEFGMVFpcE9yamVDT1JoenVtWlhZQzczM0xGVW5VNTBXY0RUNHBNQjhSMkFW!2m2!1d38.95350429459334!2d-77.4117336049676!3f130.9387553587998!4f-6.773870877992678!5f0.7820865974627469"
-                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-                    uk-responsive></iframe>
-            </div>
-        </div>
-    </div>
-    <hr>
 </div>
 
 <div class="uk-container uk-margin-large-bottom">
