--- a/faculty.html
+++ b/faculty.html
@@ -4,9 +4,9 @@ title: Faculty
 ---
 
 <div class="uk-container">
-    <div class="uk-child-width-expand@s uk-grid-large uk-grid-match" uk-grid>
+    <div class="uk-child-width-expand@s uk-grid-large" uk-grid>
         {% for person in site.data.faculty %}
-        <div class="uk-width-1-2@m">
+        <div class="uk-width-1-2@s uk-width-1-3@m">
             <h3>{{ person.name }}</h3>
             <img src="{{ person.image }}">
             <p>{{ person.bio|markdownify }}</p>
