validate email field

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ layout: transparent-navbar
             <input class="uk-input" name="_name" type="text" placeholder="Name" required>
         </div>
         <div class="uk-width-1-2@s">
-            <input class="uk-input" name="email" type="text" placeholder="Email" required>
+            <input class="uk-input" name="email" type="email" placeholder="Email" required>
         </div>
         <div class="uk-width-1-1">
             <input class="uk-input" name="howheard" type="text" placeholder="How did you hear about Oak Hill?">
