--- a/visit.html
+++ b/visit.html
@@ -368,6 +368,9 @@ title: Visit Us
         }).done(() => {
             $('#step-two').slideUp(.5, () => {
                 $('#step-three').slideDown();
+                dataLayer.push({
+                    'event': 'book visit',
+                });
             });
         });
 
