add gtm request application event

--- a/apply.html
+++ b/apply.html
@@ -9,7 +9,7 @@ title: Apply
 </div>
 
 <script>
-    window.addEventListener('', function (event) {
+    window.addEventListener('message', function (event) {
         // ignore messages from the wrong domain
         if (event.origin != 'https://forms.oakhillk12.com') {
             return;
