add meta keywords to homepage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: transparent-navbar
+extrahead:
+- <meta name="keywords" content="private schools near Herndon Virginia">
 ---
 
 <div class="uk-inline@m uk-width-1-1 uk-overflow-hidden">
