--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: transparent-navbar
 extrahead:
-- <meta name="keywords" content="private schools near Herndon Virginia">
+- <meta name="keywords" content="private schools near Herndon Virginia, private schools near me">
 ---
 
 <div class="uk-inline@m uk-width-1-1 uk-overflow-hidden">
