add alt tags to home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: transparent-navbar
 extrahead:
-- <meta name="keywords" content="private schools near Herndon Virginia, private schools near me">
+- <meta name="keywords" content="private schools in Herndon Virginia, private schools near me">
 ---
 
 <div class="uk-inline@m uk-width-1-1 uk-overflow-hidden">
@@ -31,7 +31,7 @@ extrahead:
             <picture>
                 <source type="image/webp" srcset="assets/images/IMG_2656.webp">
                 <source type="image/jpeg" srcset="assets/images/IMG_2656.jpg">
-                <img class="uk-width-1-1" src="assets/images/IMG_2656.jpg">
+                <img class="uk-width-1-1" src="assets/images/IMG_2656.jpg" alt="Kindergarten Student with Toys">
             </picture>
             <h3 class="uk-margin-remove-bottom">Kindergarten</h3>
             <p class="uk-margin-remove-top">Nearly all four year olds in our preschool program learn to read using our
@@ -47,7 +47,7 @@ extrahead:
             <picture>
                 <source type="image/webp" srcset="assets/images/IMG_9941.webp">
                 <source type="image/jpeg" srcset="assets/images/IMG_9941.jpg">
-                <img class="uk-width-1-1" src="assets/images/IMG_9941.jpg">
+                <img class="uk-width-1-1" src="assets/images/IMG_9941.jpg" alt="Lower School Student Practicin Penmanship">
             </picture>
             <h3 class="uk-margin-remove-bottom">Lower School</h3>
             <p class="uk-margin-remove-top">Grade school, or grammar school, is a time for developing structures that
@@ -62,7 +62,7 @@ extrahead:
             <picture>
                 <source type="image/webp" srcset="assets/images/IMG_0051.webp">
                 <source type="image/jpeg" srcset="assets/images/IMG_0051.jpg">
-                <img class="uk-width-1-1" src="assets/images/IMG_0051.jpg">
+                <img class="uk-width-1-1" src="assets/images/IMG_0051.jpg" alt="High School Student in Art Class">
             </picture>
             <h3 class="uk-margin-remove-bottom">Upper School</h3>
             <p class="uk-margin-remove-top">Students refine writing and speaking skills through classroom discussions and reading original sources.</p>
@@ -78,7 +78,7 @@ extrahead:
 <div class="uk-section-primary uk-margin-large-top">
     <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
         <div class="uk-cover-container">
-            <img src="assets/images/campus.webp" alt="" uk-cover>
+            <img src="assets/images/campus.webp" alt="Our Private School Campus" uk-cover>
         </div>
         <div class="">
             <div class="uk-container uk-padding-large">
