push email to gtm data layer

--- a/apply.html
+++ b/apply.html
@@ -17,6 +17,7 @@ title: Apply
 
         dataLayer.push({
             'event': 'request application',
+            'email': event.data.email,
         });
     });
 </script>
