--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ extrahead:
             <input class="uk-input" name="_name" type="text" placeholder="Name" required>
         </div>
         <div class="uk-width-1-2@s">
-            <input class="uk-input" name="email" type="email" placeholder="Email" required>
+            <input id="contact-email" class="uk-input" name="email" type="email" placeholder="Email" required>
         </div>
         <div class="uk-width-1-1">
             <input class="uk-input" name="howheard" type="text" placeholder="How did you hear about Oak Hill?">
@@ -222,6 +222,7 @@ extrahead:
 <script>
 
     function contact() {
+        email = $('#contact-email').val()
         data = $('form').serialize();
         url = `https://script.google.com/a/infercms.com/macros/s/AKfycbx1BiOoM_baAubzrsC1wsVqV8tWs61W3NZ34Moa3Sw6T-csDu8/exec?${data}&callback=?`
 
@@ -238,6 +239,7 @@ extrahead:
 
         dataLayer.push({
             'event': 'contact',
+            'email': email,
         });
 
         return false
