--- a/index.html
+++ b/index.html
@@ -201,9 +201,12 @@ extrahead:
     <p>Contact us for more information or with any questions you have.</p>
     <form action="" method="POST" class="uk-grid-small" uk-grid>
         <div class="uk-width-1-2@s">
-            <input class="uk-input" name="_name" type="text" placeholder="Name" required>
+            <input class="uk-input" name="first_name" type="text" placeholder="Name" required>
         </div>
         <div class="uk-width-1-2@s">
+            <input class="uk-input" name="last_name" type="text" placeholder="Name" required>
+        </div>
+        <div class="uk-width-1-1@s">
             <input id="contact-email" class="uk-input" name="email" type="email" placeholder="Email" required>
         </div>
         <div class="uk-width-1-1">
