fix placeholders on first and last name fields

--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@ extrahead:
     <p>Contact us for more information or with any questions you have.</p>
     <form action="" method="POST" class="uk-grid-small" uk-grid>
         <div class="uk-width-1-2@s">
-            <input class="uk-input" name="first_name" type="text" placeholder="Name" required>
+            <input class="uk-input" name="first_name" type="text" placeholder="First Name" required>
         </div>
         <div class="uk-width-1-2@s">
-            <input class="uk-input" name="last_name" type="text" placeholder="Name" required>
+            <input class="uk-input" name="last_name" type="text" placeholder="Last Name" required>
         </div>
         <div class="uk-width-1-1@s">
             <input id="contact-email" class="uk-input" name="email" type="email" placeholder="Email" required>
