--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ extrahead:
         event.preventDefault();
         email = $('#contact-email').val()
         data = $('form').serialize();
-        url = `https://script.google.com/a/infercms.com/macros/s/AKfycbx1BiOoM_baAubzrsC1wsVqV8tWs61W3NZ34Moa3Sw6T-csDu8/exec?${data}&callback=?`
+        url = `https://script.google.com/a/gmail.com/macros/s/AKfycbwffzX73SVP7bJGOHxkJGwXZFybhUeOO0Zgj-H-b4z2l8fqsQQ/exec?${data}&callback=?`
 
         $('#contact').html('<div class="uk-text-center"><div uk-spinner="ratio:3"></div></div>');
 
