--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ extrahead:
     <div class="uk-container uk-padding-large">
         <h1 class="">Blog</h1>
         <script>
-            const RSS_URL = 'http://localhost:8000/forms/blog-feed';
+            const RSS_URL = 'https://forms.oakhillk12.com/forms/blog-feed';
 
             fetch(RSS_URL)
                 .then(response => response.text())
