add background to homepage info and incrment style version

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ extrahead:
         muted playsinline uk-video="autoplay: inview" style="object-fit: cover; max-height: 760px;"></video>
     <div id="header-content" class="uk-overlay uk-position-bottom">
         <div class="uk-container">
-            <div class="uk-margin-large-bottom">
-                <h1 class="uk-light">A Classical and Christian School</h1>
-                <h4 class="uk-light">Herndon, VA | Lynchburg, VA<br>
-                    5 Day Traditional and 3 Day Hybrid</h4>
-                <div class="uk-light">
+            <div class="uk-margin-large-bottom uk-overlay uk-display-inline-block" style="background-color: rgba(255, 255, 255, .6);backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
+                <h1 class="uk-display-inline-block uk-margin-remove-bottom">A Classical and Christian School</h1><br>
+                <h4 class="uk-display-inline-block uk-margin-remove-top">Herndon, VA | Lynchburg, VA<br>
+                    5 Day Traditional and 3 Day Hybrid</h4><br>
+                <div class="uk-light uk-display-inline-block">
                     <a href="apply"
                         class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">Apply</a>
                     <a href="visit"
