--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@ extrahead:
     </div>
 </div>
 
-<div class="uk-section-primary uk-margin-large-top">
+<div class="uk-section-muted uk-margin-large-top">
+    <div class="uk-container uk-padding uk-text-center">
+        <h1>Learn more about our new Lynchburg campus.</h1>
+        <a href="/lynchburg-campus" class="uk-button uk-button-large uk-button-primary">Learn More</a>
+    </div>
+</div>
+
+<div class="uk-section-primary">
     <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
         <div class="uk-cover-container">
             <img src="assets/images/campus.webp" alt="Our Private School Campus" uk-cover>
