update curriculum info pdf

--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -210,9 +210,9 @@ title: Lynchburg Campus
 </div>
 <div class="uk-section" id="curriculum">
     <div class="uk-container uk-container-small" style="--aspect-ratio: 17/22">
-        <object data="/assets/lynchburg-curriculum.pdf" type="application/pdf" height="100%" width="100%"></object>
-            <iframe src="http://mozilla.github.io/pdf.js/web/viewer.html?file=https://oakhillk12.com/assets/lynchburg-curriculum.pdf" width="100%" height="100%"></iframe>
-          </object>
+        <object data="/assets/lynchburg-curriculum.pdf" type="application/pdf" height="100%" width="100%">
+            <a href="/assets/lynchburg-curriculum.pdf">View curriculum information here.</a>
+        </object>
     </div>
 </div>
 <div class="uk-section uk-section-primary">
