put strikethrough through discounted tuition rates

--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -21,14 +21,14 @@ title: Lynchburg Campus
                         <div class="uk-accordion-content">
                             <p class="uk-margin-remove-bottom">Tuition</p>
                             <ul class="uk-margin-remove-top">
-                                <li>Lynchburg Campus Tuition: $4250 $3250 Pilot Year </li>
+                                <li>Lynchburg Campus Tuition: <s>$4250</s> $3250 Pilot Year </li>
                                 <li>Host Church Member: $250 Discount</li>
                                 <li>2nd Child Enrollment: $250 Discount (per child)</li>
                             </ul>
 
                             <p class="uk-margin-remove-bottom">Fees</p>
                             <ul class="uk-margin-remove-top">
-                                <li>Registration Fee: $150 $50 Pilot Year</li>
+                                <li>Registration Fee: <s>$150</s> $50 Pilot Year</li>
                                 <li>Book Fee: $250</li>
                             </ul>
 
