--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -193,7 +193,7 @@ title: Lynchburg Campus
 
             <li>
                 <a class="uk-accordion-title">What is the dress code?</a>
-                <div class="uk-accordion-content">Oak Hill students wear a uniform and we expect all staff to follow a dress code.  Specific uidance on school uniforms, as well as recommendations on where to purchase uniforms, will be provided after acceptance. </div>
+                <div class="uk-accordion-content">Oak Hill students wear a uniform and we expect all staff to follow a dress code.  Specific guidance on school uniforms, as well as recommendations on where to purchase uniforms, will be provided after acceptance. </div>
             </li>
                                         
             <li>
