add new lynchburg campus cta in home header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ extrahead:
                         class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">Visit</a>
                     <a href="#contact" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary"
                         uk-scroll>Contact</a>
+                    <a href="/lynchburg-campus" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">New Lynchburg Campus</a>
                 </div>
             </div>
         </div>
