--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -203,7 +203,7 @@ title: Lynchburg Campus
 
             <li>
                 <a class="uk-accordion-title">How are classes taught?</a>
-                <div class="uk-accordion-content">Students are taught using staff from both campuses (Lynchburg and Herndon).  When under the instruction of an off-campus teacher, a fellow teacher remains in the classroom providing onsite guidance.</p>			div	
+                <div class="uk-accordion-content">Students are taught using staff from both campuses (Lynchburg and Herndon).  When under the instruction of an off-campus teacher, a fellow teacher remains in the classroom providing onsite guidance.</p>	
             </li>
         </ul>
     </div>
