--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -183,7 +183,7 @@ title: Lynchburg Campus
             </li>
             <li>
                 <a class="uk-accordion-title">What is the academic calendar for Oak Hill?</a>
-                <div class="uk-accordion-content">Oak Hill starts after Labor Day and ends the school year approximately the middle of June.  Our holiday schedule aligns with the majority of Virginia public and private schools.</div>
+                <div class="uk-accordion-content">Oak Hill starts after Labor Day and ends the school year the day before Memorial Day.  Our holiday schedule aligns with the majority of Virginia public and private schools.</div>
             </li>
                                         
             <li>
