update lynchburg campus page

--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -6,10 +6,40 @@ title: Lynchburg Campus
 
 <div class="uk-section">
     <div class="uk-container">
+        <h3>Welcome to the new Oak Hill Christian School – Lynchburg Campus (9th-12th)</h3>
+        <h5>OPEN HOUSE – SATURDAY (MAY 16th) 6-7 PM</h5>
+        <p>Located near Liberty University, our Lynchburg campus is open to all Christian families seeking a safe and secure setting for their high school-aged children.   Using a 3-Day hybrid schedule, students are on-campus Tues, Wed, Thur and then work independently off-campus Mon & Fri. </p>
+        <p>We are homeschool-friendly and provide a full 4-year high school curriculum to include History, Literature, Bible, English, Math, Science, Choir and Latin – all taught using the classical Christian approach.  No sports or extracurricular programs are offered as we encourage students to use local club and sports leagues.</p>
+
+    </div>
+</div>
+<div class="uk-section">
+    <div class="uk-container">
         <div uk-grid class="uk-child-width-1-2@m">
             <div>
                 <h1>Things to Know</h1>
                 <ul uk-accordion="multiple:true">
+                    <li>
+                        <a class="uk-accordion-title">High School Staff</a>
+                        <div class="uk-accordion-content">
+                            <h4>Leadership</h4>
+                            <p><b>Headmaster</b> - Robert Thoburn - B.A. (Business) Grove City College, J.D. (Law) Pepperdine University.  Founded Oak Hill Christian School (1997).  9 children, 7 grandchildren. </p>
+                            <p><b>Lynchburg Campus Principal</b> - Mike Harkin - B.A. (Liberal Arts) New Saint Andrews College, B.A. (Classics) University of Idaho, MBA (Business) Regent University.  Founded Tidewater Classical Academy (2007).  3 Children. </p>
+
+                            <h4>Instructors</h4>
+                            <p><b>Senior Humanities Instructor</b> – Mike Harkin – See Lynchburg Campus Principal</p>
+                            <p><b>Humanities, Latin, Choir, Trigonometry, Physical Science Instructor</b> – Robert Thoburn III – BA (Liberal Arts) New Saint Andrews College</p>
+                            <p><b>Chemistry Instructor</b> - Adam Thoburn – B.A. (Liberal Arts) New Saint Andrews College</p>
+                            <p><b>Algebra II Instructor</b> - David Sabin - BS (English Education) and MS (Educational Administration) Pensacola Christian College</p>
+                            <p><b>Algebra I Instructor</b> – Steven Powers – B.A. (Russian Studies) George Mason</p>
+                            <p><b>Senior Latin Instructor</b> - Seth Thoburn - BA (Liberal Arts) New Saint Andrews College – Final Year</p>
+                            <p><b>Choir Instructor</b> - Sharon Thoburn - AA (Liberal Arts) New Saint Andrews College</p>
+
+                            <h4>Administration</h4>
+                            <p><b>Office Manager</b> – Abigail Thoburn - BA (Liberal Arts) New Saint Andrews College – Final Year</p>
+                            <p><b>Lynchburg Administrator</b> – Sharon Thoburn - AA (Liberal Arts) New Saint Andrews College</p>
+                        </div>
+                    </li>
                     <li>
                         <a class="uk-accordion-title">Frequently Asked Questions</a>
                         <div class="uk-accordion-content">
@@ -118,18 +148,19 @@ title: Lynchburg Campus
             </div>
             <div>
                 <h1>Things to Do</h1>
-                <ol>
-                    <li><a target="_blank" href="https://forms.oakhillk12.com/form/lynchburg-application-form-21-22">Complete Online Application</a></li>
-                    <li>Pay Application Fee (Non-Refundable)</li>
-                    <li>Admissions Interview</li>
-                    <li>Math Placement Test</li>
-                    <li>Uniform Purchase</li>
-                </ol>
-                <p class="uk-margin-remove-bottom">Contact Us</p>
+                <h5 class="uk-margin-remove-bottom">Contact Us</h5>
                 <ul class="uk-margin-remove-top">
                     <li>Call <a href="tel:7037966887">(703) 796-8667</a> or email <a href="mailto:office@oakhillk12.com">office@oakhillk12.com</a></li>
                     <li>Personal tour? Text <a href="tel:4063172636">(406) 317-2636</a>.</li>
                 </ul>
+                <h5 class="uk-margin-remove-bottom">Five Steps for Admission</h5>
+                <ol class="uk-margin-remove-top">
+                    <li><a target="_blank" href="https://forms.oakhillk12.com/form/lynchburg-application-form-21-22">Complete Online Application</a></li>
+                    <li>Pay Application Fee (Non-Refundable)</li>
+                    <li>Academic Placement Review</li>
+                    <li>Math Placement Test</li>
+                    <li>Uniform Purchase</li>
+                </ol>
             </div>
         </div>
     </div>
@@ -209,7 +240,7 @@ title: Lynchburg Campus
     </div>
 </div>
 <div class="uk-section" id="curriculum">
-    <div class="uk-container uk-container-small" style="--aspect-ratio: 17/22">
+    <div class="uk-container uk-container-small" style="--aspect-ratio: 22/17">
         <object data="/assets/lynchburg-curriculum.pdf" type="application/pdf" height="100%" width="100%">
             <a href="/assets/lynchburg-curriculum.pdf">View curriculum information here.</a>
         </object>
