update vstring on pdf

--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -241,8 +241,8 @@ title: Lynchburg Campus
 </div>
 <div class="uk-section" id="curriculum">
     <div class="uk-container uk-container-small" style="--aspect-ratio: 22/17">
-        <object data="/assets/lynchburg-curriculum.pdf" type="application/pdf" height="100%" width="100%">
-            <a href="/assets/lynchburg-curriculum.pdf">View curriculum information here.</a>
+        <object data="/assets/lynchburg-curriculum.pdf?v=1" type="application/pdf" height="100%" width="100%">
+            <a href="/assets/lynchburg-curriculum.pdf?v=1">View curriculum information here.</a>
         </object>
     </div>
 </div>
