add campus pictures

--- a/campus.html
+++ b/campus.html
@@ -5,8 +5,8 @@ title: Our Campus
 
 <div class="uk-container uk-margin-bottom">
     <div class="uk-child-width-expand@s" uk-grid>
-        <div>
-            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow>
+        <div uk-slideshow>
+            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
                 <ul class="uk-slideshow-items">
                     {% for image in site.static_files %}
@@ -18,14 +18,14 @@ title: Our Campus
                     {% endfor %}
                 </ul>
             
-                <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-                <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+                <a class="uk-position-center-left uk-position-small" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+                <a class="uk-position-center-right uk-position-small" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
             
             </div>
+            <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
         </div>
         <div>
             <p>Our building features large classrooms with beautiful views.  It includes a 2,000 square foot gym and multipurpose room as well as an outdoor playground and picnic area.  Our classes also have easy access to the adjacent Arrowbrook Park (Soccer, Tennis, Basketball) and to the Arrowbrook Nature Preserve.</p>
-            <p><a href="{{ '/virtual-tour' | relative_url }}">See more on our virtual tour page.</a></p>
         </div>
     </div>
 </div>
