--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ extrahead:
 <div class="uk-section-primary">
     <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
         <div class="uk-cover-container">
-            <img src="assets/images/campus.webp" alt="Our Private School Campus" uk-cover>
+            <img src="assets/images/ch-0.png" alt="Our Private School Campus" uk-cover>
         </div>
         <div class="">
             <div class="uk-container uk-padding-large">
