--- a/apply.html
+++ b/apply.html
@@ -4,7 +4,7 @@ title: Apply
 ---
 
 <div class="uk-container uk-margin-large-top uk-margin-large-bottom">
-    <p>Fill this out to request tuition information and an online application form.</p>
+    <p>Fill this out to request a link to our online application form.</p>
     <iframe class="uk-width-1-1" height="1024" src="https://forms.oakhillk12.com/forms/request"></iframe>
 </div>
 
