update lynchburg uniform information

--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -140,7 +140,7 @@ title: Lynchburg Campus
                     <li>
                         <a class="uk-accordion-title">Uniforms</a>
                         <div class="uk-accordion-content">
-                            <a href="/assets/documents/uniforms%20information.pdf">Uniform information is available here.</a>
+                            <a href="/assets/uniforms-lynchburg.pdf">Uniform information is available here.</a>
                         </div>
                     </li>
                 </ul>
