update uniforms information

--- a/admissions-tuition.html
+++ b/admissions-tuition.html
@@ -37,7 +37,7 @@ title: Admissions and Tuition
 
     <h3>Uniforms</h3>
     <a class="uk-button uk-button-large uk-button-primary" target="_blank"
-        href="assets/documents/uniforms information.pdf">Information about our uniforms.</a>
+        href="assets/uniforms.pdf">Information about our uniforms.</a>
 
     <h3>Health Form</h3>
     <a class="uk-button uk-button-large uk-button-primary" target="_blank"
