add 2-5 button on homepage

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ extrahead:
             <picture>
                 <img class="uk-width-1-1" src="assets/images/IMG_2656.jpg" alt="Kindergarten Student with Toys">
             </picture>
-            <h3 class="uk-margin-remove-bottom">Grammar School: PK and K-5</h3>
+            <h3 class="uk-margin-remove-bottom">Grammar School: PK-1st and 2nd-5th</h3>
             <h5 class="uk-margin-remove-top">Herndon Campus</h5>
             <p class="uk-margin-remove-top">
                 Preschool (ages 3-4), Kindergarten and Grades 1-5 enjoy an outstanding academic program mastering basics of reading, writing, and math.</p>
             <div class="uk-width-1-1 uk-text-center">
-                <a href="/preschool-k5" class="uk-button uk-button-large uk-button-primary">Learn
-                    More</a>
+                <a href="/preschool-1st" class="uk-button uk-button-large uk-button-primary uk-display-inline-block">PK-1st</a>
+                <a href="/2nd-5th" class="uk-button uk-button-large uk-button-primary uk-display-inline-block">2nd-5th</a>
             </div>
         </div>
 
